--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://Developer994.github.io/towTruckSite",
-  "name": "towtrucksite",
+  "name": "towTruckSite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -35,6 +35,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.2.0"
   }
 }
